@@ -31,6 +31,8 @@ New features:
 - The autoresponse system is now back, and improved. The chat_resp.txt
   format has changed. Kore will also not respond to people who are repeating
   themselves.
+- teleportAuto_search will now prevent attackAuto from attacking monsters in
+  the event that no monsters you are searching for exist onscreen.
 
 New config options:
 - ksPlayers is a comma-seperated lists of player names that should be treated
@@ -53,10 +55,16 @@ New config options:
   2 - disconnect
   3 - teleport
   4 - respawn
+- teleportAuto_idle must be true in order for teleportAuto_search to behave as
+  expected.
 
 Internal:
 - Move a "pm" message into "pm/sent" domain so that "beepOnDomains pm" won't
   beep on your own PMs.
+- Add a third argument $obj to objectRemoved() function (just like
+  objectAdded() has), and moved the objectRemoved() calls to just before the
+  object was deleted so that $obj still exists when it is called.
+- %mon_control added to Globals.pm.
 
 Credits:
 - jsteng: Pet detection fix.
